Video container fix on mobile. Default styles for arrows

--- a/src/Views/OpenPack/styles.module.scss
+++ b/src/Views/OpenPack/styles.module.scss
@@ -6,8 +6,8 @@
 
   .container2 {
     // margin-top: 80px;
-    height: calc(100vh - 80px);
-    width: 100vw;
+    height: calc(100vh);
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,24 +16,27 @@
     font-family: $font-nasalization;
 
     .videoContainer {
-      margin-top: -50px;
-      width: 70%;
-      height: 90%;
+      // margin-top: -50px;
+      width: 90%;
+      height: 100%;
       position: relative;
       display: flex;
       align-items: center;
       flex-direction: column;
       justify-content: flex-end;
       background-color: black;
-      
+      overflow: hidden;
+
       .pinVideo {
         position: absolute;
-        top: 0;
+        top: 40%;
         left: 50%;
-        transform: translate(-50%);
+        transform: translate(-50%, -50%);
         height: 100%;
       }
       .loadMessageContainer {
+        position: absolute;
+        top: 0;
         height: 100%;
         width: 100%;
         background-color: black;
@@ -46,6 +49,13 @@
           font-family: $font-nasalization;
           color: white;
         }
+      }
+
+      .canContinue {
+        z-index: 2;
+        overflow: visible;
+        position: absolute;
+        bottom: 20%;
       }
     }
   }
@@ -124,7 +134,7 @@
     background-color: black;
     color: white;
     font-family: $font-nasalization;
-    
+
     .videoContainer {
       width: 30%;
       height: 100%;
@@ -156,6 +166,12 @@
           font-family: $font-nasalization;
           color: white;
         }
+      }
+      .canContinue {
+        z-index: 2;
+        overflow: visible;
+        position: absolute;
+        bottom: 10%;
       }
     }
   }
